force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/qtc_CPQ_Custom_Pricing__c.object-meta.xml
<CustomObject>
    <label>CPQ Custom Pricing</label>
    <nameField>
        <displayFormat>CPQCP - {00000}</displayFormat>
        <label>CPQ Custom Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Custom Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>