force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/ATGExternalIDCert__c.field-meta.xml
<CustomField>
    <fullName>ATGExternalIDCert__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External ID for migration purposes</inlineHelpText>
    <label>ATGExternalIDCert__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>