force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Consumption_Schedule__c.field-meta.xml
<CustomField>
    <fullName>qtc_Consumption_Schedule__c</fullName>
    <label>Consumption Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>