force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Discount_Schedule2__c.field-meta.xml
<CustomField>
    <fullName>qtc_Discount_Schedule2__c</fullName>
    <label>Discount Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>