force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Lookup_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Lookup_Type__c</fullName>
    <label>Lookup Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Package</fullName>
            </value>
            <value>
                <fullName>Mobile Pay</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>PIT Fees</fullName>
            </value>
            <value>
                <fullName>PIT Fees - OO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>