force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Payments_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Payments_Type__c</fullName>
    <label>Payments Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full NCR Payments</fullName>
            </value>
            <value>
                <fullName>Above-Store Only</fullName>
            </value>
            <value>
                <fullName>No Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>