force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Reporting_Type__c</fullName>
    <label>Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB (Console)</fullName>
            </value>
            <value>
                <fullName>Enterprise (Insight)</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>false</isActive>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>SMB</fullName>
                <isActive>false</isActive>
                <label>SMB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>