force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Sub_Package_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Sub_Package_Product_Code__c</fullName>
    <formula>qtc_Sub_Package__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Package Product Code</label>
    <type>Text</type>
</CustomField>