force-app/main/default/objects/qtc_CPQ_Custom_Pricing__c/fields/qtc_Sub_Package_Product_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>qtc_Sub_Package_Product_Code_Text__c</fullName>
    <label>Sub-Package Product Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>